--- a/src/app/Pages/add-feedback-employee/add-feedback-employee.html
+++ b/src/app/Pages/add-feedback-employee/add-feedback-employee.html
@@ -1,30 +1,29 @@
 <div class="feed-back-sec px-3" [formGroup]="form">
   <h1 class="mt-5 text-white text-end big">FEEDBACK</h1>
 
+
   <!-- Question 01 -->
   <div class="first-feedback p-3 rounded text-white border-0">
     <div class="row">
       <div class="col-lg-1 me-5">
         <img src="assets/img/01.png" alt="Question Icon">
       </div>
-      <div class="col mt-lg-0 text-lg-start mt-4 ms-xl-2 ms-lg-5">
+
+      <div class="col mt-lg-0 mt-4 ms-xl-2 ms-lg-5">
         <p class="small mb-0">Question 01</p>
-        <h5 class="mb-0">How would you rate our services?</h5>
+        <h5 class="mb-0">Overall Performance</h5>
 
         <div class="d-flex align-items-center mt-3">
           <div class="stars">
             <button
               *ngFor="let star of [1,2,3,4,5]"
-              class="star-btn"
-              [class.active]="form.value.rate >= star"
               type="button"
-              (click)="setRating(star)"
+              class="star-btn"
+              [class.active]="form.value.overallPerformance >= star"
+              (click)="setRating('overallPerformance', star)"
             >
               <i class="fa fa-star"></i>
             </button>
-          </div>
-          <div class="low mt-0 pt-1 ms-4">
-            <h6 class="mb-0">Rates</h6>
           </div>
         </div>
       </div>
@@ -36,6 +35,33 @@
     <div class="row">
       <div class="col-lg-1 me-5">
         <img src="assets/img/02.png" alt="">
+      </div>
+
+      <div class="col ms-xl-2 ms-lg-5 mt-lg-0 mt-4">
+        <p class="small mb-0">Question 02</p>
+        <h5 class="mb-0 fs-6">Attention To Details</h5>
+
+        <div class="stars mt-3">
+          <button
+            *ngFor="let star of [1,2,3,4,5]"
+            type="button"
+            class="star-btn"
+            [class.active]="form.value.attentionToDetails >= star"
+            (click)="setRating('attentionToDetails', star)"
+          >
+            <i class="fa fa-star"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Question 02 -->
+  <div class="second-feedback p-3 rounded text-white mt-3">
+    <div class="row">
+      <div class="col-lg-1 me-5">
+        <img src="assets/img/03.png" alt="">
       </div>
       <div class="col ms-xl-2 ms-lg-5 mt-lg-0 mt-4">
         <p class="small mb-0">Question 02</p>
